@@ -7,19 +7,31 @@ import io.github.lijinhong11.protectorapi.flag.CommonFlags;
 import io.github.lijinhong11.protectorapi.flag.FlagState;
 import io.github.lijinhong11.protectorapi.flag.FlagStates;
 import io.github.lijinhong11.protectorapi.protection.IProtectionRange;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
 import org.bukkit.Bukkit;
 import org.bukkit.OfflinePlayer;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 public class PlotSquaredPlotInfo implements IProtectionRange {
     private final Plot plot;
 
     public PlotSquaredPlotInfo(Plot plot) {
         this.plot = plot;
+    }
+
+    @Override
+    public @NotNull String getId() {
+        return plot.getId().toString();
+    }
+
+    @Override
+    public @NotNull String getDisplayName() {
+        return plot.getAlias();
     }
 
     @Override
@@ -62,7 +74,7 @@ public class PlotSquaredPlotInfo implements IProtectionRange {
 
     @Override
     public List<OfflinePlayer> getMembers() {
-        return plot.getMembers().stream().map(Bukkit::getOfflinePlayer).toList();
+        return plot.getMembers().stream().map(Bukkit::getOfflinePlayer).collect(Collectors.toList());
     }
 
     @Override
